Trying to add a dark mode using CSS only. There is some issues but I will resolve soon!

--- a/style.css
+++ b/style.css
@@ -6,11 +6,22 @@
     }
 }
 
-body {
-    background-image: linear-gradient(to right, #fffbd5, #b20a2c);
-    line-height: calc(1ex/0.32);
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
 }
 
+
+/* body {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+    background-image: linear-gradient(to right, #fffbd5, #b20a2c); 
+line-height: calc(1ex/0.32);
+background-color: var(--bg-color);
+}
+*/
 main {
     text-align: center;
     display: flex;
@@ -58,6 +69,7 @@ input:focus-visible {
     outline-style: none;
 }
 
+
 .next-btn {
     border-radius: 8px;
     border: 1px solid black;
@@ -71,4 +83,84 @@ input:focus-visible {
 
 .stuff {
     display: flex;
+}
+
+/* Navbar */
+
+.navbar {
+    display: grid;
+    grid-template-columns: 100px repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.navbar span {
+    margin: auto 1em;
+    grid-row: 1/1;
+    grid-column: 1/2;
+    z-index: 2;
+    background-color: white;
+    text-align: center;
+    border-radius: 50%;
+    height: 75%;
+    width: 45%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.upper-nav {
+    display: flex;
+    list-style: none;
+    column-gap: 2em;
+    grid-row: 1/1;
+    grid-column: 4/-1;
+}
+
+.lower-nav {
+    grid-row: 2/2;
+    grid-column: 1/span 4;
+    background-color: white;
+    ;
+}
+
+.invert {
+    filter: invert(1) hue-rotate(180deg);
+}
+
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+
+/* 
+.navbar p:first-child {
+    justify-self: flex-start;
+}
+
+.navbar p:last-child {
+    justify-self: flex-end;
+} */
+
+:root {
+    --color-text: black;
+    --color-background: white;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --color-text: white;
+        --color-background: black;
+    }
+}
+
+body {
+    color: var(--color-text);
+    background-color: var(--color-background);
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+    /* background-image: linear-gradient(to right, #fffbd5, #b20a2c); */
+    line-height: calc(1ex/0.32);
+    /* background-color: var(--bg-color); */
+
 }
